# rubik

./: CMakeLists.txt  Config.h.in  README
assets/: background.blend  background.entity  cubepart.blend  cubepart.entity
meshes/: cube.mesh  quad.mesh
shaders/: default.shader  object_pickup.shader  pickup.shader
src/: ArgumentParser.cpp  ArgumentParser.h  Cube.h  CubePart.h  Puzzle.cpp  Puzzle.h  Rubik.cpp  Rubik.h  main.cpp
src/common/: Movable.h  NonCopyable.h  Renderable.h  Rotatable.h  Scalable.h
src/game/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubePart.cpp  CubePart.h  Font.cpp  Font.h  Label.cpp  Label.h  TextLabel.cpp  TextLabel.h
src/math/: Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/opengl/: CubeMesh.cpp  CubeMesh.h  DepthTexture.cpp  DepthTexture.h  Extention.cpp  Extention.h  FrameBuffer.cpp  FrameBuffer.h  ImageTexture.cpp  ImageTexture.h  Mesh.cpp  Mesh.h  RenderEffect.cpp  RenderEffect.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h
src/utils/: ArgumentParser.cpp  ArgumentParser.h  Logger.cpp  Logger.h  MeshData.cpp  MeshData.h  ResourceManager.cpp  ResourceManager.h
textures/: cubepart.tga  cubepart.xcf
